--- a/src/views/signoVital.html
+++ b/src/views/signoVital.html
@@ -3,72 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SURATECH</title>
-    <link rel="stylesheet" href="../../assets/styles/estilos.css">
+    <title>Signos vitales</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
-    <header>
-
-    </header>
-
+    
     <main>
-        <section class="container my-5">
-            <div>
-
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-4 align-self-center animate__animated animate__backInLeft">
-                    <h3>TUS SIGNOS VITALES EN LINEA</h3>
-                </div>
-                <div class="col-12 col-md-4 animate__animated animate__backInRight">
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat, ipsum? Voluptatem distinctio officiis voluptatibus quas! Maxime accusamus velit autem sed? At eos natus, consequuntur autem voluptas rerum pariatur sequi ipsam voluptates incidunt sit optio architecto iste eius accusantium sapiente dolorum iure necessitatibus! Nostrum, corrupti? Numquam amet soluta porro perferendis dolorum!
-                    </p>
-                </div>
-
-                <section class="container my-5">
-                    <div class="row justify-content-center">
-                          <div class="col-12 col-md-4 animate__animated animate__backInLeft">
-                            <p>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat, ipsum? Voluptatem distinctio officiis voluptatibus quas! Maxime accusamus velit autem sed? At eos natus, consequuntur autem voluptas rerum pariatur sequi ipsam voluptates incidunt sit optio architecto iste eius accusantium sapiente dolorum iure necessitatibus! Nostrum, corrupti? Numquam amet soluta porro perferendis dolorum!
-                            </p>
-                        </div>
-                        <div class="col-12 col-md-4 align-self-center animate__animated animate__backInRight">
-                            <h3>MEDICINA VIRTUAL</h3>
-                        </div>
-                      
-
-            </div>
+        <section class="container my-4">
             <div class="row">
+                <div class="col-12 col-md-8">
+                    <h3>Registro de signos vitales</h3>
+                    <form class="p-5 border rounded shadow">
+                        <div class="row">
+                            <div class="col-6">
+                                <label class="form-label">Nombres: </label>
+                                <input type="text" class="form-control" id="nombresignovital">
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label">Valor: </label>
+                                <input type="number" class="form-control" id="valorsignovital">
+                            </div>
+                        </div>
+                        <div class="row my-3">
+                            <div class="col-6">
+                                <label class="form-label">Fecha Medida: </label>
+                                <input type="date" class="form-control" id="fechamedidasignovital">
+                            </div>
+                        </div>
 
-            </div>
-        </section>
-         <section class="container-fluid menu">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-5">
-                    <img src="../../assets/img/humano.png" class="img-fluid" alt="img-fluid">
-                </div>
-                <div class="col-12 col-md-5 text-white">
-                    <h3>Registra tu signo vital</h3>
-                    <form>
-
+                        <button class="btn btn-primary w-100" type="submit" id="buttonregistrosignovital">Registrar</button>
                     </form>
                 </div>
-
             </div>
-         </section>
+        </section>
     </main>
-
-    <footer>
-
-    </footer>
-    
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../controllers/controladorsignovital.js"></script>
 </body>
 </html>
