--- a/src/views/dashboards/dashboardEnfermedad.html
+++ b/src/views/dashboards/dashboardEnfermedad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pacientes registrados</title>
+    <title>Enfermedades registradas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -13,10 +13,10 @@
             <div class="row">
                 <div class="col-12 col-md-9 border rounded p-5 shadow">
 									<h4>Pacientes: </h4>
-									<p>Hasta la fecha la APP registra <span class="fw-bold">14936</span> usuarios</p>
-									<i class="bi bi-bandaid-fill fs-1"></i>
-									<i class="bi bi-heart-pulse-fill fs-1 mx-3"></i>
-									<i class="bi bi-lungs-fill fs-1"></i>
+									<p>Hasta la fecha la APP registra <span class="fw-bold">13926</span> enfermedades</p>
+									<i class="bi bi-virus2 fs-1"></i>
+									<i class="bi bi-thermometer-high fs-1 mx-3"></i>
+									<i class="bi bi-postcard-heart fs-1"></i>
                 </div>
 								<div class="col-12 col-md-3">
 									<img src="../../../assets/img/tigreLogo.webp" alt="" class="img-fluid">
@@ -32,12 +32,7 @@
         </section>
     </main>
 
-
-
-    
-    
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../../dashboardControllers/controladorpaciente.js"></script>
+    <script src="../../dashboardControllers/controladorenfermedad.js"></script>
 </body>
 </html>
