--- a/src/views/dashboards/dashboardMedicamento.html
+++ b/src/views/dashboards/dashboardMedicamento.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medicamentos registrados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../../../assets/img/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../../../assets/styles/estilos.css">
+    
 </head>
 <body>
     <main>
+        <h1 class="m-2 mt-4 text-center mb-0" style="color: #0033A0; font-size: 4rem;">— Control de medicamentos —</h1>
+        <p class="mt-0 text-center" style="font-size: 20px;">Consulte aquí información sobre sus medicamentos.</p>
         <section class="container my-5">
             <div class="row">
                 <div class="col-12 col-md-9 border rounded p-5 shadow">
@@ -24,7 +32,7 @@
             </div>
         </section>
         <section class="container">
-            <div class="row row-cols-1 row-cols-md-3 g-5" id="fila">
+            <div class="row row-cols-1 row-cols-md-3 mb-5 g-5" id="fila">
                 
             
             </div>
