--- a/src/views/medico.html
+++ b/src/views/medico.html
@@ -19,7 +19,7 @@
         <section class="container my-4">
             <div class="row">
                 <div class="col-12 col-md-8">
-                    <h3>Registro de medicos</h3>
+                    <h3>Registro de medicos profesionales</h3>
                     <form class="p-5 border rounded shadow">
                         <div class="row">
                             <div class="col-6">
