--- a/src/views/dashboards/dashboardMedicamento.html
+++ b/src/views/dashboards/dashboardMedicamento.html
@@ -5,38 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medicamentos registrados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../../../assets/img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../../../assets/styles/estilos.css">
-    
+    <link rel="stylesheet" href="../../../assets/styles/dashboard.css">
+    <style>
+
+        body {
+        background-image: url('/assets/img/blurbg1.jpg');
+        }
+
+        .sidenav {
+            height: 100%;
+            width: 250px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: #5c87e2;
+            padding-top: 20px;
+            z-index: 1;
+        }
+
+        .sidenav a {
+            padding: 15px 25px;
+            text-decoration: none;
+            font-size: 18px;
+            color: white;
+            display: block;
+        }
+
+        .sidenav a:hover {
+            background-color: #4b70a0;
+        }
+
+        .main-content {
+            margin-left: 270px;
+            padding: 20px;
+        }
+
+        .sidenav .active {
+            background-color: #4b70a0;
+        }
+    </style>
 </head>
 <body>
-    <main>
-        <h1 class="m-2 mt-4 text-center mb-0" style="color: #0033A0; font-size: 4rem;">— Control de medicamentos —</h1>
-        <p class="mt-0 text-center" style="font-size: 20px;">Consulte aquí información sobre sus medicamentos.</p>
-        <section class="container my-5">
-            <div class="row">
-                <div class="col-12 col-md-9 border rounded p-5 shadow">
-									<h4>Pacientes: </h4>
-									<p>Hasta la fecha la APP registra <span class="fw-bold">11936</span> medicamentos</p>
-									<i class="bi bi-capsule fs-1"></i>
-                                    <i class="bi bi-prescription2 mx-3 fs-1"></i>
-									<i class="bi bi-capsule-pill fs-1"></i>
-                </div>
-								<div class="col-12 col-md-3">
-									<img src="../../../assets/img/tigreLogo.webp" alt="" class="img-fluid">
-								</div>
-            </div>
-        </section>
+    <div class="sidenav">
+        <h1 class="text-white text-center fs-1"><i class="bi bi-capsule-pill"></i> &nbsp;Medicamentos <strong></strong></h1>
+        <hr>
+        <br>
+        <h2 class="text-white text-center"><i class="bi bi-list"></i>&nbsp;Menú</h2>
+        <br>
+        <a href="../../../index.html"> <i class="bi bi-house"></i>&nbsp;&nbsp;&nbsp;Inicio</a>
+        <a href="#" class="active"><i class="bi bi-speedometer2"></i>&nbsp;&nbsp;&nbsp;Dashboard</a>
+        <a href="../medicamento.html"><i class="bi bi-ui-checks"></i>&nbsp;&nbsp;&nbsp;Registrar Medicamentos</a>
+    </div>
+    <main class="main-content">
+        <div style="background-color: #1148be9e; padding: 40px; margin-bottom: 20px;">
+            <h1 class="m-2 mt-4 text-center mb-0" style="color: #ffffff; font-size: 4rem;">— Control de medicamentos — <img src="../../../assets/img/medicamento.png" width="50px" alt=""></h1>
+            
+            <p class="mt-0 text-center mb-5" style="font-size: 20px;">Consulte aquí información sobre sus medicamentos.</p>
+        </div>
+
         <section class="container">
             <div class="row row-cols-1 row-cols-md-3 mb-5 g-5" id="fila">
-                
-            
+               
             </div>
-
         </section>
     </main>
 
