--- a/src/views/paciente.html
+++ b/src/views/paciente.html
@@ -1,83 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paciente</title>
+    <title>Registrar Pacientes</title>
+    <link rel="stylesheet" href="../../assets/styles/style.css">
+    <link rel="shortcut icon" href="../../assets/img/logoredondo.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../../../assets/img/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../../assets/styles/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 </head>
-<body>
-    <main>
-        <section class="container my-4">
-            <div class="row">
-                <div class="col-12 col-md-8">
-                    <h3>Registro del paciente</h3>
-                    <form class="p-5 border rounded shadow">
-                        <div class="row">
-                            <div class="col-6">
-                                <label class="form-label">Nombre Completo: </label>
-                                <input type="text" class="form-control" id="nombrepaciente" required>
-                            </div>
-                            <div class="col-6">
-                                <label class="form-label">Fecha de nacimiento: </label>
-                                <input type="date" class="form-control" id="nacimientopaciente" required>
-                            </div>
-                        </div>
-                        <div class="row my-3">
-                            <div class="col-6">
-                                <label class="form-label">Ciudad: </label>
-                                <input type="text" class="form-control" id="ciudadpaciente" required>
-                            </div>
-                            <div class="col-6">
-                                <label class="form-label">Correo: </label>
-                                <input type="email" class="form-control" id="correopaciente" required>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6">
-                                <label class="form-label">Telefono: </label>
-                                <input type="text" class="form-control" id="telefonopaciente" required>
-                            </div>
-                            <div class="col-6">
-                                <label class="form-label">IPS: </label>
-                                <input type="text" class="form-control" id="ipspaciente" required><br>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6">
-                                <label class="form-label">Fecha de afiliacion: </label>
-                                <input type="date" class="form-control" id="afiliacionpaciente" required>
-                            </div>
-                            <div class="col-6">
-                                <label class="form-label">Grupo de ingresos: </label>
-                                <select class="form-select" id="ingresospaciente" required>
-                                    <option selected>Selecciona una opcion</option>
-                                    <option value="A">A</option>
-                                    <option value="B">B</option>
-                                    <option value="C">C</option>
-                                  </select>
-                            </div>
-                        </div>
-                        <div class="row my-3">
-                            <div class="form-check form-switch ms-2">
-                                <input class="form-check-input" type="checkbox" role="switch" id="polizapaciente" required>
-                                <label class="form-check-label" for="flexSwitchCheckDefault">¿Tiene poliza?</label>
-                              </div>
-                        </div>
-
-                        <button class="btn btn-primary w-100" type="submit" id="buttonregistropaciente">Registrar</button>
-                    </form>
+<body class="fondo">
+    <section class="container-lg contenedor my-5">
+        <h2 style="color: #0033A0 !important; font-weight: bold;" id="icon-container">Registro de pacientes &nbsp; <i data-bs-toggle="modal" data-bs-target="#infoModal" class="bi bi-question-circle-fill pregunta icon"></i></h2>
+            <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                    <br>
+                    Complete el formulario con los datos personales del paciente, incluyendo nombre, fecha de nacimiento, contacto y detalles médicos. Asegúrese de verificar la información antes de enviarla para garantizar un registro correcto. <br>
+                    <br>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Entendido</button>
                 </div>
+              </div>
             </div>
-        </section>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../controllers/controladorpaciente.js"></script>
+          </div>
+
+        <div class="col-12  justify-content-center">
+            <section class="container my-4">
+                <div class="row">
+                    <div class="col-12 col-md-12">
+                        <form class="p-5 border rounded">
+                            <div class="row">
+                                <div class="col-6">
+                                    <label class="form-label">Nombre Completo: </label>
+                                    <input type="text" class="form-control" id="nombrepaciente" required>
+                                </div>
+                                <div class="col-6">
+                                    <label class="form-label">Fecha de nacimiento: </label>
+                                    <input type="date" class="form-control" id="nacimientopaciente" required>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-6">
+                                    <label class="form-label">Ciudad: </label>
+                                    <input type="text" class="form-control" id="ciudadpaciente" required>
+                                </div>
+                                <div class="col-6">
+                                    <label class="form-label">Correo: </label>
+                                    <input type="email" class="form-control" id="correopaciente" required>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6">
+                                    <label class="form-label">Telefono: </label>
+                                    <input type="text" class="form-control" id="telefonopaciente" required>
+                                </div>
+                                <div class="col-6">
+                                    <label class="form-label">IPS: </label>
+                                    <input type="text" class="form-control" id="ipspaciente" required><br>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6">
+                                    <label class="form-label">Fecha de afiliacion: </label>
+                                    <input type="date" class="form-control" id="afiliacionpaciente" required>
+                                </div>
+                                <div class="col-6">
+                                    <label class="form-label">Grupo de ingresos: </label>
+                                    <select class="form-select" id="ingresospaciente" required>
+                                        <option selected>Selecciona una opcion</option>
+                                        <option value="A">A</option>
+                                        <option value="B">B</option>
+                                        <option value="C">C</option>
+                                      </select>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="form-check form-switch ms-2">
+                                    <input class="form-check-input" type="checkbox" role="switch" id="polizapaciente" required>
+                                    <label class="form-check-label" for="flexSwitchCheckDefault">¿Tiene poliza?</label>
+                                  </div>
+                            </div>
+                            <button class="btn btn-primary w-100" type="submit" id="buttonregistropaciente">Registrar</button>
+                            <button type="button" id="boton2" onclick="window.location.href='../../index.html'">Regresar al inicio</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </section>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+<script src="../controllers/controladorpaciente.js" type="module"></script>
 </html>
